--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 :root {
   --main-font: "Montserrat", sans-serif;
   --second-font: "Great Vibes", cursive;
+  --main-bg-transparent: rgba(208, 200, 200, 0.336);
 }
 
 /* Box sizing rules */
@@ -104,9 +105,9 @@ textarea:not([rows]) {
   scroll-margin-block: 5ex;
 }
 
-/* container */
+/* Responsive */
 
-.container {
+.container-box {
   max-width: 1536px;
   margin-left: auto;
   margin-right: auto;
@@ -115,11 +116,11 @@ textarea:not([rows]) {
   margin-inline: auto;
 }
 
-/* main-section */
+/* main-section - Home Page */
 
 h3 {
   font-size: 40px;
-  margin-bottom: 12px;
+  margin-bottom: 14px;
 }
 
 h1,
@@ -127,15 +128,15 @@ h1,
   font-family: var(--second-font);
   font-size: 50px;
   font-weight: 700;
-  margin-bottom: 10px;
+  margin-bottom: 13px;
 }
 
 .header {
   text-align: center;
-  background-color: rgba(208, 200, 200, 0.336);
+  background-color: var(--main-bg-transparent);
   border: 2px solid rgb(74, 69, 69);
   padding: 45px 65px;
-  margin-top: 200px;
+  margin-top: 120px;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
@@ -175,6 +176,58 @@ h1,
   background-color: #a08780;
   color: white;
 }
+.h2-subheader {
+  margin-top: 60px;
+  text-align: center;
+  font-weight: 600;
+}
+
+/* Second-Section - Home Page */
+
+img {
+  border-radius: 25px;
+  overflow: hidden;
+  padding: 12px;
+}
+.background-image {
+  box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
+  background-color: rgba(207, 212, 212, 0.372);
+  border-radius: 8px;
+}
+.project-image {
+  transition: 1s;
+  filter: brightness(80%);
+}
+.project-image:hover {
+  transform: scale(1.1);
+  filter: brightness(100%);
+}
+
+.project-link {
+  background-color: #baa29c8d;
+  padding: 15px 15px;
+  border-radius: 20px;
+  font-size: 28px;
+  margin: 2px;
+  color: white;
+  transition: all 300ms ease-in-out;
+}
+.project-link:hover {
+  transform: scale(1.1);
+}
+
+.project-description,
+p {
+  font-size: 18px;
+  font-weight: 600;
+  letter-spacing: 2px;
+  margin-top: 10px;
+  background-color: #a39b9b2b;
+  border-radius: 10px;
+  font-weight: 500;
+  font-family: "Poppins", sans-serif;
+}
+
 /* media queries */
 @media (max-width: 1280px) {
   .container {
