--- a/src/style.css
+++ b/src/style.css
@@ -180,6 +180,7 @@ h1,
   margin-top: 60px;
   text-align: center;
   font-weight: 600;
+  color: #eae2e0;
 }
 
 /* Second-Section - Home Page */
@@ -216,8 +217,7 @@ img {
   transform: scale(1.1);
 }
 
-.project-description,
-p {
+.project-description {
   font-size: 18px;
   font-weight: 600;
   letter-spacing: 2px;
@@ -226,6 +226,57 @@ p {
   border-radius: 10px;
   font-weight: 500;
   font-family: "Poppins", sans-serif;
+}
+
+/* Footer */
+footer {
+  background-color: rgba(255, 255, 255, 0.313);
+  padding: 35px 65px;
+  margin-top: 120px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  text-align: center;
+}
+
+.social-links {
+  font-size: 50px;
+  margin: 8px;
+  color: #b29d8c;
+
+  background-color: #1d1610;
+  border-radius: 10px;
+  transition: all 500ms ease-in-out;
+}
+.social-links:hover {
+  background-color: #b29d8c;
+  color: #1d1610;
+}
+
+.email {
+  display: inline-block;
+  position: relative;
+  color: #1d1610;
+  margin-top: 13px;
+}
+.email:hover {
+  color: #47280d;
+}
+.email:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #3e331c;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.email:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
 
 /* media queries */
