--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
   --main-font: "Montserrat", sans-serif;
   --second-font: "Great Vibes", cursive;
   --main-bg-transparent: rgba(208, 200, 200, 0.336);
+  --dark-brown-text-color: #1d1610;
 }
 
 /* Box sizing rules */
@@ -116,7 +117,25 @@ textarea:not([rows]) {
   margin-inline: auto;
 }
 
-/* main-section - Home Page */
+/* Navigation */
+
+.navbar {
+  background-color: #b9a594e8;
+}
+.nav-link {
+  color: #1d1610;
+  font-weight: 500;
+  transition: all 200ms ease-in-out;
+}
+.nav-link:hover {
+  color: rgb(136, 111, 66);
+}
+.navbar-brand {
+  font-family: var(--second-font);
+  font-size: 29px;
+}
+
+/* Main-section - Home Page */
 
 h3 {
   font-size: 40px;
@@ -180,7 +199,9 @@ h1,
   margin-top: 60px;
   text-align: center;
   font-weight: 600;
-  color: #eae2e0;
+  color: var(--dark-brown-text-color);
+  background-color: var(--main-bg-transparent);
+  padding: 10px 10px;
 }
 
 /* Second-Section - Home Page */
@@ -209,7 +230,8 @@ img {
   padding: 15px 15px;
   border-radius: 20px;
   font-size: 28px;
-  margin: 2px;
+  margin: 6px;
+  margin-top: 6px;
   color: white;
   transition: all 300ms ease-in-out;
 }
