--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,10 @@
 :root {
   --main-font: "Montserrat", sans-serif;
   --second-font: "Great Vibes", cursive;
+  --third-font:"Poppins", sans-serif;
   --main-bg-transparent: rgba(208, 200, 200, 0.336);
   --dark-brown-text-color: #1d1610;
+  --gold-color:#b29d8c;
 }
 
 /* Box sizing rules */
@@ -155,7 +157,7 @@ h1,
   background-color: var(--main-bg-transparent);
   border: 2px solid rgb(74, 69, 69);
   padding: 45px 65px;
-  margin-top: 120px;
+  margin-top: 70px;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
@@ -232,7 +234,7 @@ img {
   font-size: 28px;
   margin: 6px;
   margin-top: 6px;
-  color: #b29d8c;
+  color: var(--gold-color);
   transition: all 300ms ease-in-out;
 }
 .project-link:hover {
@@ -241,13 +243,13 @@ img {
 
 .project-description {
   font-size: 18px;
-  font-weight: 600;
+  font-weight: 700;
   letter-spacing: 2px;
   margin-top: 10px;
   background-color: #efeaea57;
   border-radius: 10px;
   font-weight: 500;
-  font-family: "Poppins", sans-serif;
+  font-family: var(--third-font);
 }
 
 /* Footer */
@@ -263,21 +265,21 @@ footer {
 .social-links {
   font-size: 50px;
   margin: 8px;
-  color: #b29d8c;
+  color: var(--gold-color);
 
-  background-color: #1d1610;
+  background-color: var(--dark-brown-text-color);
   border-radius: 10px;
   transition: all 500ms ease-in-out;
 }
 .social-links:hover {
-  background-color: #b29d8c;
-  color: #1d1610;
+  background-color: var(--gold-color);
+  color: var(--dark-brown-text-color);
 }
 
 .email {
   display: inline-block;
   position: relative;
-  color: #1d1610;
+  color: var(--dark-brown-text-color);
   margin-top: 13px;
 }
 .email:hover {
