--- a/src/about.css
+++ b/src/about.css
@@ -144,6 +144,8 @@ textarea:not([rows]) {
   font-weight: 500;
   border: 2px dotted var(--gold-color);
   padding: 15px;
+  text-align: center;
+  margin-top: 40px;
 }
 .front-end {
   color: #585660;
@@ -213,18 +215,13 @@ textarea:not([rows]) {
 
 .title-achiev {
   text-decoration: underline;
-  color:#7b6c5f;
+  color: #7b6c5f;
 }
-.achiev-text{font-family: var(--third-font);
-font-size: 21px;
-letter-spacing: 3px;}
-
-
-
-
-
-
-
+.achiev-text {
+  font-family: var(--third-font);
+  font-size: 21px;
+  letter-spacing: 3px;
+}
 
 /* Footer */
 footer {
@@ -294,16 +291,52 @@ footer {
   .container {
     max-width: 640px;
   }
+  .title {
+    margin-top: 0 auto;
+  }
 }
 
 @media (max-width: 640px) {
   .container {
     max-width: 475px;
   }
+  .title {
+    margin-top: 0 auto;
+  }
+  .main-button {
+    display: block;
+    text-align: center;
+    width: fit-content;
+    margin: 0 auto;
+  }
+  .profile {
+    margin: 0;
+    padding: 0;
+  }
+
+  .achiev-text {
+    font-size: 15px;
+  }
 }
 
 @media (max-width: 475px) {
   .container {
     width: 100%;
+  }
+  .title {
+    margin-top: 0 auto;
+  }
+  .main-button {
+    display: block;
+    text-align: center;
+    width: fit-content;
+    margin: 0 auto;
+  }
+  .profile {
+    margin: 0;
+    padding: 0;
+  }
+  .achiev-text {
+    font-size: 15px;
   }
 }
