made some small changes

--- a/src/projects.css
+++ b/src/projects.css
@@ -132,3 +132,34 @@ textarea:not([rows]) {
   font-family: var(--second-font);
   font-size: 29px;
 }
+
+/* media queries */
+@media (max-width: 1280px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (max-width: 640px) {
+  .container {
+    max-width: 475px;
+  }
+}
+
+@media (max-width: 475px) {
+  .container {
+    width: 100%;
+  }
+}
