--- a/src/projects.css
+++ b/src/projects.css
@@ -189,14 +189,18 @@ textarea:not([rows]) {
   font-weight: 500;
 }
 
-.project-button i {
-  font-size: 18px;
+.project-button .bx-right-arrow-alt,
+.bxl-github {
+  font-size: 30px;
   transition: transform 0.3s;
-  color:var(--gold);
+  color: var(--gold);
 }
 
-.project-button:hover i {
-  transform: translateX(4px);
+.project-button:hover .bx-right-arrow-alt {
+  transform: translateX(10px);
+}
+.bxl-github:hover {
+  transform: scale(1.3);
 }
 
 /* swipper */
@@ -204,16 +208,62 @@ textarea:not([rows]) {
 .swiper-button-prev {
   color: var(--main-color);
 }
- .projects-container .swiper-pagination-bullets{
-color:var(--gold);
+.projects-container .swiper-pagination-bullets {
+  color: var(--gold);
 }
 
+/* Footer */
+footer {
+  border-top: 3px solid var(--gold);
+  background-color: var(--main-color);
+  padding: 35px 65px;
+  margin-top: 120px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  text-align: center;
+}
 
+.social-links {
+  font-size: 50px;
+  margin: 8px;
 
+  color: var(--gold);
 
+  border-radius: 10px;
+  transition: all 500ms ease-in-out;
+}
+.social-links:hover {
+  color: var(--main-color);
+  background-color: var(--beige);
+}
 
+.email {
+  display: inline-block;
+  position: relative;
+  color: var(--beige);
 
+  margin-top: 13px;
+}
+.email:hover {
+  color: var(--gold);
+}
+.email:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--gold);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
 
+.email:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
 
 /* media queries */
 
