added media queries for the swiper

--- a/src/about.css
+++ b/src/about.css
@@ -140,6 +140,7 @@ textarea:not([rows]) {
   font-size: 29px;
   color: var(--gold);
 }
+.navbar-brand:hover{color:#a79181;}
 
 /* Main Section */
 .title {
