--- a/src/projects.css
+++ b/src/projects.css
@@ -162,7 +162,7 @@ textarea:not([rows]) {
 }
 
 .project-image {
-  width: 900px;
+  width: 1100px;
   border-radius: 12px;
   margin-bottom: 20px;
   display: block;
@@ -210,6 +210,7 @@ textarea:not([rows]) {
 .swiper-button-next,
 .swiper-button-prev {
   color: var(--main-color);
+  width:200px;
 }
 .projects-container .swiper-pagination-bullets {
   color: var(--gold);
@@ -278,7 +279,9 @@ footer {
   .swiper-button-next,
   .swiper-button-prev {
     color: var(--gold);
+    
   }
+ 
 }
 
 @media (max-width: 1024px) {
@@ -288,6 +291,7 @@ footer {
   .swiper-button-next,
   .swiper-button-prev {
     color: var(--gold);
+     
   }
   .project-image {
     width: 900px;
@@ -301,6 +305,8 @@ footer {
   .swiper-button-next,
   .swiper-button-prev {
     color: var(--gold);
+    width:30px;
+    
   }
   .project-image {
     width: 650px;
@@ -314,6 +320,8 @@ footer {
   .swiper-button-next,
   .swiper-button-prev {
     color: var(--gold);
+    width:40px;
+    height:10px;
   }
   .project-image {
     width: 470px;
@@ -331,5 +339,6 @@ footer {
   .swiper-button-next,
   .swiper-button-prev {
     color: var(--gold);
+   
   }
 }
