--- a/src/contact.css
+++ b/src/contact.css
@@ -246,7 +246,7 @@ textarea:not([rows]) {
 .contact-header {
   text-align: center;
   font-size: 110px;
-  margin-top: 170px;
+  margin-top: 100px;
   font-family: var(--second-font);
   color: var(--gold);
 }
@@ -264,8 +264,11 @@ textarea:not([rows]) {
   font-size: 27px;
   font-family: var(--fourth-font);
   text-align: center;
+  color:var(--gold);
      
 }
+.second-paragraph{margin-top: 10px;
+font-size: 20px;}
 
 .contact-links {
   text-align: center;
@@ -280,12 +283,15 @@ textarea:not([rows]) {
 .double-arrow {
   font-size: 20px;
 }
+
+
+
 /* Footer */
 footer {
   border-top: 3px solid var(--gold);
   background-color: var(--main-color);
   padding: 35px 65px;
-  margin-top: 120px;
+  margin-top: 40px;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   text-align: center;
