--- a/src/index.css
+++ b/src/index.css
@@ -179,14 +179,15 @@ h1,
   display: flex;
   margin-top: 30px;
   justify-content: center;
+ 
 }
 .main-button {
-  margin-right: 55px;
+  
   border: none;
   box-shadow: 0 0 10px #000000b3;
   font-size: 20px;
   padding: 14px 20px;
-
+ margin:10px;
   background-color: var(--main-color);
   border-radius: 22px;
   color: var(--beige);
