--- a/src/about.css
+++ b/src/about.css
@@ -122,6 +122,23 @@ textarea:not([rows]) {
   margin-inline: auto;
 }
 
+
+/* Scroll Bar */
+
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 8px;
+  background-color: hsl(207, 4%, 65%);
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--gold);
+  border-radius: 8px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color:#b59e8abc;
+
+}
+
 /* Navigation */
 
 .navbar {
