--- a/src/contact.css
+++ b/src/contact.css
@@ -122,6 +122,22 @@ textarea:not([rows]) {
   margin-inline: auto;
 }
 
+/* Scroll Bar */
+
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 8px;
+  background-color: hsl(207, 4%, 65%);
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--gold);
+  border-radius: 8px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color:#b59e8abc;
+
+}
+
 /* Navigation */
 
 .navbar {
@@ -234,7 +250,6 @@ textarea:not([rows]) {
   font-family: var(--third-font);
   font-size: 21px;
   letter-spacing: 3px;
-   
 }
 .certificate-image {
   border: 3px solid rgb(207, 202, 202);
@@ -264,11 +279,12 @@ textarea:not([rows]) {
   font-size: 45px;
   font-family: var(--second-font);
   text-align: center;
-  color:var(--gold);
-     
+  color: var(--gold);
 }
-.second-paragraph{margin-top: 10px;
-font-size: 20px;}
+.second-paragraph {
+  margin-top: 10px;
+  font-size: 20px;
+}
 
 .contact-links {
   text-align: center;
@@ -283,8 +299,6 @@ font-size: 20px;}
 .double-arrow {
   font-size: 20px;
 }
-
-
 
 /* Footer */
 footer {
@@ -400,8 +414,6 @@ footer {
   }
   .contact-text {
     font-size: 20px;
-    
-    
   }
 }
 
