--- a/src/index.css
+++ b/src/index.css
@@ -122,6 +122,38 @@ textarea:not([rows]) {
   margin-inline: auto;
 }
 
+/* Scroll Bar */
+
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 8px;
+  background-color: hsl(207, 4%, 65%);
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--gold);
+  border-radius: 8px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #b59e8abc;
+}
+
+/* Scroll Up */
+.scrollup {
+  position: fixed;
+  right: 16px;
+  bottom: 50px;
+
+  display: inline-flex;
+  font-size: 20px;
+  color: var(--gold);
+  z-index: 10;
+  transition: bottom 0.3s, transform 0.3s;
+}
+
+.scrollup:hover {
+  transform: translateY(-4px);
+}
+
 /* Navigation */
 
 .navbar {
@@ -179,15 +211,13 @@ h1,
   display: flex;
   margin-top: 30px;
   justify-content: center;
- 
 }
 .main-button {
-  
   border: none;
   box-shadow: 0 0 10px #000000b3;
   font-size: 20px;
   padding: 14px 20px;
- margin:10px;
+  margin: 10px;
   background-color: var(--main-color);
   border-radius: 22px;
   color: var(--beige);
