--- a/src/projects.css
+++ b/src/projects.css
@@ -117,6 +117,22 @@ textarea:not([rows]) {
   margin-inline: auto;
 }
 
+/* Scroll Bar */
+
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 8px;
+  background-color: hsl(207, 4%, 65%);
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--gold);
+  border-radius: 8px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color:#b59e8abc;
+
+}
+
 /* Navigation */
 
 .navbar {
@@ -218,8 +234,6 @@ textarea:not([rows]) {
   transition: 1s;
 }
 
-
-
 .project-image:hover {
   transform: scale(1.1);
 }
@@ -233,7 +247,6 @@ textarea:not([rows]) {
   font-family: var(--third-font);
   text-align: center;
   white-space: normal;
- 
 }
 .sources {
   text-decoration: underline;
