--- a/src/contact.css
+++ b/src/contact.css
@@ -134,8 +134,7 @@ textarea:not([rows]) {
   border-radius: 8px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background-color:#b59e8abc;
-
+  background-color: #b59e8abc;
 }
 
 /* Navigation */
@@ -370,41 +369,13 @@ footer {
   .container {
     max-width: 640px;
   }
-  .title {
-    margin-top: 0 auto;
-  }
-  .achiev-text {
-    font-size: 18px;
-  }
-  .title-achiev {
-    font-size: 22px;
-  }
 }
 
 @media (max-width: 640px) {
   .container {
     max-width: 475px;
   }
-  .title {
-    margin-top: 0 auto;
-  }
-  .main-button {
-    display: block;
-    text-align: center;
-    width: fit-content;
-    margin: 0 auto;
-  }
-  .profile {
-    margin: 0;
-    padding: 0;
-  }
 
-  .achiev-text {
-    font-size: 15px;
-  }
-  .title-achiev {
-    font-size: 20px;
-  }
   .contact-header {
     font-size: 70px;
     margin-top: 50px;
@@ -413,6 +384,9 @@ footer {
     margin-top: 30px;
   }
   .contact-text {
+    font-size: 35px;
+  }
+  .contact-links-h5 {
     font-size: 20px;
   }
 }
@@ -421,28 +395,16 @@ footer {
   .container {
     width: 100%;
   }
-  .title {
-    margin-top: 0 auto;
-  }
-  .main-button {
-    display: block;
-    text-align: center;
-    width: fit-content;
-    margin: 0 auto;
-  }
-  .profile {
-    margin: 0;
-    padding: 0;
-  }
-  .achiev-text {
-    font-size: 15px;
-  }
-  .title-achiev {
-    font-size: 20px;
-  }
-  .contact-header {
+   {
     font-size: 70px;
     margin-top: 50px;
+  }
+
+  .contact-text {
+    font-size: 35px;
+  }
+  .contact-links-h5 {
+    font-size: 20px;
   }
   footer {
     margin-top: 30px;
